Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ nav a:hover {
 
 <h1>ASAMBLEA DE DIOS EL EDÉN</h1>
 
-<div class="logo">ASAMBLEA DE DIOS EL EDÉN – LOGO RGB</div>
+<div class="logo">ASAMBLEA DE DIOS EL EDÉN </div>
 
 <nav>
     <a href="#">Testimonios</a>
@@ -112,3 +112,4 @@ nav a:hover {
 
 </body>
 </html>
+
