Update background color to blue
Changed background color from black to blue.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <style>
 /* --- ESTILO HACKEr CONSOLA VERDE --- */
 body {
-    background-color: #000;
+    background-color: blue;
     color: #00ff66;
     font-family: "Courier New", monospace;
     margin: 0;
@@ -91,7 +91,7 @@ nav a:hover {
 </head>
 <body>
 
-<h1>ASAMBLEA DE DIOS EL EDÉN</h1>
+<h1>BIENVENIDOS A </h1>
 
 <div class="logo">ASAMBLEA DE DIOS EL EDÉN </div>
 
@@ -112,4 +112,5 @@ nav a:hover {
 
 </body>
 </html>
+
 
