Refactor HTML and CSS for improved styling
Updated the styling and layout of the HTML page, including changes to the background color, font family, and animations.

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <style>
 /* --- ESTILO HACKEr CONSOLA VERDE --- */
 body {
-    background-color: blue;
-    color: #00ff66;
-    font-family: "Courier New", monospace;
-    margin: 0;
+      margin: 0;
     padding: 0;
+    background: rgba(0, 100, 255, 0.3); /* Azul transparente */
+    backdrop-filter: blur(4px); /* Opcional: efecto de vidrio */
+    font-family: Arial, sans-serif;
 }
 
 /* --- TÍTULO DORADO BRILLANTE --- */
@@ -112,5 +112,6 @@ nav a:hover {
 
 </body>
 </html>
+
 
 
