--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
 <style>
 /* --- ESTILO HACKEr CONSOLA VERDE --- */
 body {
-      margin: 0;
+       margin: 0;
     padding: 0;
-    background: rgba(0, 100, 255, 0.3); /* Azul transparente */
-    backdrop-filter: blur(4px); /* Opcional: efecto de vidrio */
+    background: rgba(210, 180, 140, 0.35); /* Café claro transparente */
     font-family: Arial, sans-serif;
 }
 
@@ -112,6 +111,7 @@ nav a:hover {
 
 </body>
 </html>
+
 
 
 
