--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 body {
        margin: 0;
     padding: 0;
-    background: rgba(210, 180, 140, 0.35); /* Café claro transparente */
+    background:  rgba(222, 184, 135, 0.3); 
     font-family: Arial, sans-serif;
 }
 
@@ -111,6 +111,7 @@ nav a:hover {
 
 </body>
 </html>
+
 
 
 
