Change background color and improve styles
Updated background color and styling in index.html

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <style>
 /* --- ESTILO HACKEr CONSOLA VERDE --- */
 body {
-       margin: 0;
+        margin: 0;
     padding: 0;
-    background:  rgba(222, 184, 135, 0.3); 
+    background: rgba(101, 67, 33, 0.45); /* Café oscuro transparente */
     font-family: Arial, sans-serif;
 }
 
@@ -111,6 +111,7 @@ nav a:hover {
 
 </body>
 </html>
+
 
 
 
