--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  body {
     margin: 0;
     padding: 0;
-    background: rgba(101, 67, 33, 0.45); /* Café oscuro transparente */
+    background: rgba(85, 42, 16, 0.5);
     font-family: Arial, sans-serif;
 }
 
@@ -111,6 +111,7 @@ nav a:hover {
 
 </body>
 </html>
+
 
 
 
