--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
 <style>
 /* --- ESTILO HACKEr CONSOLA VERDE --- */
  body {
-    margin: 0;
+     margin: 0;
     padding: 0;
-    background: rgba(85, 42, 16, 0.5);
+    background-image: url("sunset_dark_sky_148456_3415x3415.jpg"); /* Cambia por el nombre de tu imagen */
+    background-size: cover; /* La imagen llena toda la pantalla */
+    background-position: center; /* Centrada */
+    background-repeat: no-repeat; /* No se repite */
+    background-attachment: fixed; /* Efecto parallax */
     font-family: Arial, sans-serif;
 }
 
@@ -111,6 +115,7 @@ nav a:hover {
 
 </body>
 </html>
+
 
 
 
