--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  body {
      margin: 0;
     padding: 0;
-    background-image: url("sunset_dark_sky_148456_3415x3415.jpg"); /* Cambia por el nombre de tu imagen */
+    background-image: url("dolo.jpg"); /* Cambia por el nombre de tu imagen */
     background-size: cover; /* La imagen llena toda la pantalla */
     background-position: center; /* Centrada */
     background-repeat: no-repeat; /* No se repite */
@@ -115,6 +115,7 @@ nav a:hover {
 
 </body>
 </html>
+
 
 
 
