Modify testimonios section content
Updated content in the testimonios section.

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ section {
 
 <section id="testimonios">
     <h2>📖 Testimonios</h2>
-    <p>Aquí puedes agregar testimonios de miembros de la iglesia.</p>
+    <p>ALABANZA A DIOS TODOPODEROSO .</p>
 </section>
 
 <section id="audios">
@@ -151,3 +151,4 @@ section {
 
 </body>
 </html>
+
