--- a/audios.html
+++ b/audios.html
@@ -67,8 +67,13 @@ section {
 <h1>🎧 Audios</h1>
 
 <section>
-    <p>NO DISPONIBLE</p>
+    <p>Aca solo estaran auidos de 15, a 20 mnts</p>
+ <audio controls>
+    <source src="predica1.mp3" type="audio/mpeg">
+    Tu navegador no soporta audio.
+</audio>
 </section>
 
 </body>
 </html>
+
