Change audio source and fix text errors
Updated audio source and corrected spelling in the description.

--- a/audios.html
+++ b/audios.html
@@ -69,11 +69,12 @@ section {
 <section>
     <p>Aca solo estaran auidos de 15, a 20 mnts</p>
  <audio controls>
-    <source src="predica1.mp3" type="audio/mpeg">
+    <source src="testimonio.mp3" type="audio/mpeg">
     Tu navegador no soporta audio.
 </audio>
 </section>
 
 </body>
 </html>
+
 
