--- a/index.html
+++ b/index.html
@@ -189,18 +189,18 @@ footer::before {
 
 <!-- MENÚ PC -->
 <nav>
-    <a href="#">Testimonios</a>
-    <a href="#">Audios</a>
-    <a href="#">Actividades</a>
-    <a href="#">Imágenes</a>
+    <a href="testimonios.html">Testimonios</a>
+    <a href="audios.html">Audios</a>
+    <a href="actividades.html">Actividades</a>
+    <a href="imagen.html">Imágenes</a>
 </nav>
 
 <!-- MENÚ MÓVIL (VERDE HACKEr) -->
 <div class="mobile-menu" id="mobileMenu">
-    <a href="#">Testimonios</a>
-    <a href="#">Audios</a>
-    <a href="#">Actividades</a>
-    <a href="#">Imágenes</a>
+    <a href="testimonios.html">Testimonios</a>
+    <a href="audios.html">Audios</a>
+    <a href="actividades.html">Actividades</a>
+    <a href="imagen.hmtl">Imágenes</a>
 </div>
 
 <div class="contenido">
@@ -223,5 +223,6 @@ function toggleMenu() {
 
 </body>
 </html>
+
 
 
