--- a/index.html
+++ b/index.html
@@ -18,11 +18,49 @@ body {
     font-family: Arial, sans-serif;
 }
 
+/* --- LOGO ANIMADO IZQUIERDA --- */
+.logo-left {
+  position: fixed;
+  top: 10px;
+  left: 10px;
+  z-index: 9999;
+  display: flex;
+  flex-direction: column;
+  font-family: Arial, sans-serif;
+  pointer-events: none;
+}
+
+.logo-left .line1 {
+  color: #00ff66;
+  font-size: 1.1rem;
+  font-weight: bold;
+  text-shadow: 0 0 8px #00ff66;
+  animation: verde 3s infinite ease-in-out;
+}
+
+.logo-left .line2 {
+  color: gold;
+  font-size: 1.4rem;
+  font-weight: bold;
+  text-shadow: 0 0 12px gold;
+  animation: oro 2.5s infinite ease-in-out;
+}
+
+@keyframes verde {
+  50% { text-shadow: 0 0 15px #00ff66, 0 0 25px #00ff66; }
+}
+
+@keyframes oro {
+  0% { text-shadow: 0 0 10px gold; }
+  50% { text-shadow: 0 0 25px gold, 0 0 45px #ffdd55; }
+  100% { text-shadow: 0 0 10px gold; }
+}
+
 /* --- TÍTULO DORADO BRILLANTE --- */
 h1 {
     text-align: center;
     font-size: 3.5rem;
-    margin-top: 40px;
+    margin-top: 80px;
     color: gold;
     text-shadow: 0 0 10px #ffd700, 0 0 20px #ffaa00, 0 0 40px #ffdd55;
     animation: glow 2s infinite alternate;
@@ -32,22 +70,7 @@ h1 {
     to { text-shadow: 0 0 25px #ffea00; }
 }
 
-/* --- LOGO RGB ANIMADO --- */
-.logo {
-    text-align: center;
-    font-size: 2rem;
-    font-weight: bold;
-    margin-top: 10px;
-    animation: rgbGlow 3s infinite linear;
-}
-@keyframes rgbGlow {
-    0% { color: red; }
-    33% { color: lime; }
-    66% { color: cyan; }
-    100% { color: magenta; }
-}
-
-/* === MENÚ NORMAL PARA PC === */
+/* --- MENÚ HACKEr --- */
 nav {
     margin-top: 30px;
     text-align: center;
@@ -67,6 +90,20 @@ nav a:hover {
     background-color: #00ff66;
     color: #000;
     box-shadow: 0 0 15px #00ff66;
+}
+
+/* ---- MENÚ RESPONSIVE PARA CELULAR ---- */
+@media (max-width: 600px) {
+    nav a {
+        display: block;
+        margin: 10px auto;
+        width: 70%;
+        font-size: 1.3rem;
+    }
+
+    h1 {
+        margin-top: 120px;
+    }
 }
 
 /* CONTENEDOR TEXTO */
@@ -113,95 +150,26 @@ footer::before {
     background: gold;
     box-shadow: 0 0 10px gold, 0 0 20px #ffea00;
 }
-
-/* ====================================================== */
-/*           MENÚ HAMBURGUESA MIXTO (DORADO + VERDE)      */
-/* ====================================================== */
-
-/* Botón hamburguesa */
-.hamburger {
-    display: none;
-    font-size: 2.3rem;
-    color: gold;
-    text-shadow: 0 0 12px gold, 0 0 25px #ffdd55;
-    cursor: pointer;
-    text-align: center;
-    margin-top: 25px;
-}
-
-/* Menú oculto por defecto en móvil */
-.mobile-menu {
-    display: none;
-    flex-direction: column;
-    text-align: center;
-}
-
-.mobile-menu a {
-    margin: 12px auto;
-    padding: 10px 20px;
-    width: 70%;
-    border: 1px solid #00ff66;
-    color: #00ff66;
-    font-size: 1.3rem;
-    text-decoration: none;
-    transition: 0.3s;
-}
-
-.mobile-menu a:hover {
-    background-color: #00ff66;
-    color: black;
-    box-shadow: 0 0 15px #00ff66;
-}
-
-/* Mostrar botón hamburguesa y ocultar menú normal en móvil */
-@media (max-width: 700px) {
-
-    nav {
-        display: none;
-    }
-
-    .hamburger {
-        display: block;
-    }
-
-    .mobile-menu.show {
-        display: flex;
-        animation: fadeIn 0.4s ease;
-    }
-}
-
-@keyframes fadeIn {
-    from { opacity: 0; transform: scale(0.95); }
-    to   { opacity: 1; transform: scale(1); }
-}
-
 </style>
-</head>
 
+</head>
 <body>
 
-<h1>BIENVENIDOS A</h1>
+<!-- LOGO SUPERIOR IZQUIERDO -->
+<div class="logo-left">
+  <span class="line1">ASAMBLEA DE DIOS</span>
+  <span class="line2">EL EDÉN</span>
+</div>
 
-<div class="logo">ASAMBLEA DE DIOS EL EDÉN</div>
+<h1>BIENVENIDOS A </h1>
 
-<!-- BOTÓN HAMBURGUESA (DORADO) -->
-<div class="hamburger" onclick="toggleMenu()">☰</div>
-
-<!-- MENÚ PC -->
+<!-- MENÚ FUNCIONAL -->
 <nav>
     <a href="testimonios.html">Testimonios</a>
     <a href="audios.html">Audios</a>
     <a href="actividades.html">Actividades</a>
     <a href="imagen.html">Imágenes</a>
 </nav>
-
-<!-- MENÚ MÓVIL (VERDE HACKEr) -->
-<div class="mobile-menu" id="mobileMenu">
-    <a href="testimonios.html">Testimonios</a>
-    <a href="audios.html">Audios</a>
-    <a href="actividades.html">Actividades</a>
-    <a href="imagen.hmtl">Imágenes</a>
-</div>
 
 <div class="contenido">
     <p class="bienvenida">
@@ -215,14 +183,6 @@ footer::before {
     © 2025 ASAMBLEA DE DIOS EL EDÉN — La gloria sea para Dios ✨
 </footer>
 
-<script>
-function toggleMenu() {
-    document.getElementById("mobileMenu").classList.toggle("show");
-}
-</script>
-
 </body>
 </html>
-
-
 
