Fix HTML structure and update links

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ footer::before {
     <a href="testimonios.html">Testimonios</a>
     <a href="audios.html">Audios</a>
     <a href="actividades.html">Actividades</a>
-    <a href="imagen.html">Imágenes</a>
+    <a href="imagenes.html">Imágenes</a>
 </nav>
 
 <div class="contenido">
@@ -185,4 +185,5 @@ footer::before {
 
 </body>
 </html>
+
 
