Change background image and refine styles
Updated background image and made minor style adjustments.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 body {
     margin: 0;
     padding: 0;
-    background-image: url("dolo.jpg");
+    background-image: url("fija.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -185,5 +185,6 @@ footer::before {
 
 </body>
 </html>
+
 
 
