--- a/index.html
+++ b/index.html
@@ -156,12 +156,9 @@ footer::before {
 <body>
 
 <!-- LOGO SUPERIOR IZQUIERDO -->
-<div class="logo-left">
-  <span class="line1">ASAMBLEA DE DIOS</span>
-  <span class="line2">EL EDÉN</span>
-</div>
+ 
 
-<h1>BIENVENIDOS A </h1>
+<h1>BIENVENIDOS A ASAMBLEA DE DIOS EL EDEN  </h1>
 
 <!-- MENÚ FUNCIONAL -->
 <nav>
@@ -185,6 +182,7 @@ footer::before {
 
 </body>
 </html>
+
 
 
 
