Add creator information to footer
Added footer with creator information.

--- a/index.html
+++ b/index.html
@@ -179,9 +179,13 @@ footer::before {
 <footer>
     © 2025 ASAMBLEA DE DIOS EL EDÉN — La gloria sea para Dios ✨
 </footer>
+ <footer>
+  Sitio web creado por Sofonias Hernandez.
+  </footer>
 
 </body>
 </html>
+
 
 
 
