--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 body {
     margin: 0;
     padding: 0;
-    background-image: url("fija.jpg");
+    background-image: url("fondo.jpeg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -185,6 +185,7 @@ footer::before {
 
 </body>
 </html>
+
 
 
 
