--- a/audios.html
+++ b/audios.html
@@ -67,7 +67,7 @@ section {
 <h1>🎧 Audios</h1>
 
 <section>
-    <p>Aca solo estaran auidos de 15, a 20 mnts</p>
+    <p>Aca solo estaran audios de 15, a 20 mnts</p>
  <audio controls>
     <source src="testimonio.mp3" type="audio/mpeg">
     Tu navegador no soporta audio.
@@ -76,5 +76,6 @@ section {
 
 </body>
 </html>
+
 
 
