Refactor index.html structure and styles

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <title>ASAMBLEA DE DIOS EL EDÉN</title>
 
 <style>
+<img src="oficial5")
+ </img>
 /* --- ESTILO HACKEr CONSOLA VERDE --- */
 body {
     margin: 0;
@@ -185,6 +187,7 @@ footer::before {
 
 </body>
 </html>
+
 
 
 
