Fix HTML structure and clean up styles

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 
 /* --- ESTILO HACKEr CONSOLA VERDE --- */
 body {
- <img src="oficial5")
- </img>
+ 
     margin: 0;
     padding: 0;
     background-image: url("fondo.jpeg");
@@ -22,43 +21,7 @@ body {
 }
 
 /* --- LOGO ANIMADO IZQUIERDA --- */
-.logo-left {
-  position: fixed;
-  top: 10px;
-  left: 10px;
-  z-index: 9999;
-  display: flex;
-  flex-direction: column;
-  font-family: Arial, sans-serif;
-  pointer-events: none;
-}
-
-.logo-left .line1 {
-  color: #00ff66;
-  font-size: 1.1rem;
-  font-weight: bold;
-  text-shadow: 0 0 8px #00ff66;
-  animation: verde 3s infinite ease-in-out;
-}
-
-.logo-left .line2 {
-  color: gold;
-  font-size: 1.4rem;
-  font-weight: bold;
-  text-shadow: 0 0 12px gold;
-  animation: oro 2.5s infinite ease-in-out;
-}
-
-@keyframes verde {
-  50% { text-shadow: 0 0 15px #00ff66, 0 0 25px #00ff66; }
-}
-
-@keyframes oro {
-  0% { text-shadow: 0 0 10px gold; }
-  50% { text-shadow: 0 0 25px gold, 0 0 45px #ffdd55; }
-  100% { text-shadow: 0 0 10px gold; }
-}
-
+ 
 /* --- TÍTULO DORADO BRILLANTE --- */
 h1 {
     text-align: center;
@@ -159,7 +122,8 @@ footer::before {
 <body>
 
 <!-- LOGO SUPERIOR IZQUIERDO -->
- 
+ <img src="oficial5">
+ </img>
 
 <h1>BIENVENIDOS A ASAMBLEA DE DIOS EL EDEN  </h1>
 
@@ -188,6 +152,7 @@ footer::before {
 
 </body>
 </html>
+
 
 
 
