Fix HTML structure and update logo filename

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ footer::before {
 <body>
 
 <!-- LOGO SUPERIOR IZQUIERDO -->
-<img src="logo.gif" class="logo" alt="Logo">
+<img src="LOGO.gif" class="logo" alt="Logo">
 
 <!-- TÍTULO -->
 <h1>BIENVENIDOS A ASAMBLEA DE DIOS EL EDEN</h1>
@@ -151,7 +151,7 @@ footer::before {
     <a href="testimonios.html">Testimonios</a>
     <a href="audios.html">Audios</a>
     <a href="actividades.html">Actividades</a>
-    <a href="imagenes.html">Imágenes</a>
+    <a href="imagen.html">Imágenes</a>
 </nav>
 
 <!-- TEXTO DE BIENVENIDA -->
@@ -174,3 +174,4 @@ footer::before {
 
 </body>
 </html>
+
