--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@ footer::before {
     <a href="audios.html">Audios</a>
     <a href="actividades.html">Actividades</a>
     <a href="imagen.html">Imágenes</a>
+     <a href="videos.html">Videos</a>
 </nav>
 
 <!-- TEXTO DE BIENVENIDA -->
@@ -174,4 +175,5 @@ footer::before {
 
 </body>
 </html>
+
 
