Refactor index.html structure and content

--- a/index.html
+++ b/index.html
@@ -144,14 +144,14 @@ footer::before {
 <img src="LOGO.gif" class="logo" alt="Logo">
 
 <!-- TÍTULO -->
-<h1>BIENVENIDOS A ASAMBLEA DE DIOS EL EDEN</h1>
+<h1> ASAMBLEA DE DIOS EL EDEN</h1>
 
 <!-- MENÚ -->
 <nav>
     <a href="testimonios.html">Testimonios</a>
     <a href="audios.html">Audios</a>
     <a href="actividades.html">Actividades</a>
-    <a href="imagen.html">Imágenes</a>
+    <a href="#">Imágenes</a>
      <a href="videos.html">Videos</a>
 </nav>
 
@@ -175,5 +175,6 @@ footer::before {
 
 </body>
 </html>
+
 
 
