Fix HTML structure and correct activity details

--- a/actividades.html
+++ b/actividades.html
@@ -61,22 +61,22 @@ h1 {
 
     <div class="actividad">
         <strong>• Culto de oración</strong><br>
-        📆 Martes — 7:00 PM
+         Martes — 7:00 PM
     </div>
 
     <div class="actividad">
         <strong>• NO DISPONIBLE</strong><br>
-        📆 Viernes — 7:00 PM
+         Viernes — 7:00 PM
     </div>
 
     <div class="actividad">
         <strong>• Servicio dominical</strong><br>
-        📆 Domingo — 10:00 AM
+         Domingo — 10:00 AM
     </div>
 
     <div class="actividad">
         <strong>• NO DIPONIBLE</strong><br>
-        📆 
+         
     </div>
 
     <div class="volver">
@@ -86,3 +86,4 @@ h1 {
 
 </body>
 </html>
+
