Revise audio list and descriptions in audios.html
Updated audio entries and descriptions in audios.html.

--- a/audios.html
+++ b/audios.html
@@ -63,23 +63,77 @@ audio {
     <h1>🎧 Audios</h1>
 
     <div class="audio-box">
-        <strong>Predicación 1 — Tema:</strong> La Fe  
+        <strong>Testimonio de un joven.</strong> La Fe  
         <audio controls>
             <source src="testimonio.mp3" type="audio/mpeg">
         </audio>
     </div>
 
     <div class="audio-box">
-        <strong>Predicación 2 — Tema:</strong> El Poder de Dios  
+        <strong>Apocalipsis</strong> El Poder de Dios  
         <audio controls>
-            <source src="audio2.mp3" type="audio/mpeg">
+            <source src="DOS.mp3" type="audio/mpeg">
         </audio>
     </div>
 
     <div class="audio-box">
-        <strong>Alabanza — Tema:</strong> Dios es bueno  
+        <strong>Apocalipsis</strong> Dios es bueno  
         <audio controls>
-            <source src="alabanza.mp3" type="audio/mpeg">
+            <source src="LAS 7 COPAS.mp3" type="audio/mpeg">
+        </audio>
+    </div>
+  <div class="audio-box">
+        <strong>Apocalipsis</strong> Dios es bueno  
+        <audio controls>
+            <source src="LAS BODAS DEL CORDERO.mp3" type="audio/mpeg">
+        </audio>
+    </div>
+  <div class="audio-box">
+        <strong>Apocalipsis</strong> Dios es bueno  
+        <audio controls>
+            <source src="LOS 144,000.mp3" type="audio/mpeg">
+        </audio>
+    </div>
+  <div class="audio-box">
+        <strong>Apocalipsis:</strong> Dios es bueno  
+        <audio controls>
+            <source src="NUEVA JERUSALEN.mp3" type="audio/mpeg">
+        </audio>
+    </div>
+  <div class="audio-box">
+        <strong>Alabanza</strong> Dios es bueno  
+        <audio controls>
+            <source src="Quiero darte adoracion.mp3" type="audio/mpeg">
+        </audio>
+    </div>
+  <div class="audio-box">
+        <strong>Duo libano</strong> Dios es bueno  
+        <audio controls>
+            <source src="Reyes y Sacerdotes.mp3" type="audio/mpeg">
+        </audio>
+    </div>
+  <div class="audio-box">
+        <strong>Duo libano</strong> Dios es bueno  
+        <audio controls>
+            <source src="Soy aquel.mp3" type="audio/mpeg">
+        </audio>
+    </div>
+  <div class="audio-box">
+        <strong>Alabanza</strong> Dios es bueno  
+        <audio controls>
+            <source src="Te alabare Alcides Bojorquez.mp3" type="audio/mpeg">
+        </audio>
+    </div>
+  <div class="audio-box">
+        <strong>Duo libano</strong> Dios es bueno  
+        <audio controls>
+            <source src="Verdaderamente Libre.mp3" type="audio/mpeg">
+        </audio>
+    </div>
+  <div class="audio-box">
+        <strong>Apocalipsis:</strong> Dios es bueno  
+        <audio controls>
+            <source src="UNO.mp3" type="audio/mpeg">
         </audio>
     </div>
 
@@ -91,4 +145,5 @@ audio {
 
 </body>
 </html>
+
 
