Fix HTML formatting and update audio sources

--- a/audios.html
+++ b/audios.html
@@ -72,7 +72,7 @@ audio {
     <div class="audio-box">
         <strong>Apocalipsis</strong> El Poder de Dios  
         <audio controls>
-            <source src="DOS.mp3" type="audio/mpeg">
+            <source src="DOS .mp3" type="audio/mpeg">
         </audio>
     </div>
 
@@ -103,7 +103,7 @@ audio {
   <div class="audio-box">
         <strong>Alabanza</strong> Dios es bueno  
         <audio controls>
-            <source src="Quiero darte adoracion.mp3" type="audio/mpeg">
+            <source src="Quiero Darte Adoración.mp3" type="audio/mpeg">
         </audio>
     </div>
   <div class="audio-box">
@@ -115,13 +115,13 @@ audio {
   <div class="audio-box">
         <strong>Duo libano</strong> Dios es bueno  
         <audio controls>
-            <source src="Soy aquel.mp3" type="audio/mpeg">
+            <source src="Soy Aquel.mp3" type="audio/mpeg">
         </audio>
     </div>
   <div class="audio-box">
         <strong>Alabanza</strong> Dios es bueno  
         <audio controls>
-            <source src="Te alabare Alcides Bojorquez.mp3" type="audio/mpeg">
+            <source src="Te Alabare Alcides Bojorquez.mp3" type="audio/mpeg">
         </audio>
     </div>
   <div class="audio-box">
@@ -145,5 +145,6 @@ audio {
 
 </body>
 </html>
+
 
 
