--- a/audios.html
+++ b/audios.html
@@ -61,6 +61,8 @@ audio {
 
 <div class="contenedor">
     <h1>🎧 Audios</h1>
+ <h2>Dios te bendiga aca puedes reproducir cantos, textos biblicos, y testimonios tambien puedes descargar si deseas presionando 
+  los tres, puntitos y dandole a descargar.</h2>h2>
 
     <div class="audio-box">
         <strong>Testimonio de un joven.</strong> La Fe  
@@ -70,68 +72,68 @@ audio {
     </div>
 
     <div class="audio-box">
-        <strong>Apocalipsis</strong> El Poder de Dios  
+        <strong>Apocalipsis</strong>  
         <audio controls>
             <source src="DOS .mp3" type="audio/mpeg">
         </audio>
     </div>
 
     <div class="audio-box">
-        <strong>Apocalipsis</strong> Dios es bueno  
+        <strong>Apocalipsis</strong>   
         <audio controls>
             <source src="LAS 7 COPAS.mp3" type="audio/mpeg">
         </audio>
     </div>
   <div class="audio-box">
-        <strong>Apocalipsis</strong> Dios es bueno  
+        <strong>Apocalipsis</strong>  
         <audio controls>
             <source src="LAS BODAS DEL CORDERO.mp3" type="audio/mpeg">
         </audio>
     </div>
   <div class="audio-box">
-        <strong>Apocalipsis</strong> Dios es bueno  
+        <strong>Apocalipsis</strong> 
         <audio controls>
             <source src="LOS 144,000.mp3" type="audio/mpeg">
         </audio>
     </div>
   <div class="audio-box">
-        <strong>Apocalipsis:</strong> Dios es bueno  
+        <strong>Apocalipsis:</strong>  
         <audio controls>
             <source src="NUEVA JERUSALEN.mp3" type="audio/mpeg">
         </audio>
     </div>
   <div class="audio-box">
-        <strong>Alabanza</strong> Dios es bueno  
+        <strong>Alabanza</strong> 
         <audio controls>
             <source src="Quiero Darte Adoración.mp3" type="audio/mpeg">
         </audio>
     </div>
   <div class="audio-box">
-        <strong>Duo libano</strong> Dios es bueno  
+        <strong>Duo libano</strong>  
         <audio controls>
             <source src="Reyes y Sacerdotes.mp3" type="audio/mpeg">
         </audio>
     </div>
   <div class="audio-box">
-        <strong>Duo libano</strong> Dios es bueno  
+        <strong>Duo libano</strong>   
         <audio controls>
             <source src="Soy Aquel.mp3" type="audio/mpeg">
         </audio>
     </div>
   <div class="audio-box">
-        <strong>Alabanza</strong> Dios es bueno  
+        <strong>Alabanza</strong>  
         <audio controls>
             <source src="Te Alabare Alcides Bojorquez.mp3" type="audio/mpeg">
         </audio>
     </div>
   <div class="audio-box">
-        <strong>Duo libano</strong> Dios es bueno  
+        <strong>Duo libano</strong>   
         <audio controls>
             <source src="Verdaderamente Libre.mp3" type="audio/mpeg">
         </audio>
     </div>
   <div class="audio-box">
-        <strong>Apocalipsis:</strong> Dios es bueno  
+        <strong>Apocalipsis:</strong>   
         <audio controls>
             <source src="UNO.mp3" type="audio/mpeg">
         </audio>
@@ -145,6 +147,7 @@ audio {
 
 </body>
 </html>
+
 
 
 
