Add video boxes with placeholders in videos.html
Added multiple video boxes with placeholder content.

--- a/videos.html
+++ b/videos.html
@@ -101,6 +101,19 @@ footer {
     <!-- 🔥 EJEMPLO DE UN VIDEO (puedes duplicar este bloque) -->
     <div class="video-box">
         <h2 class="section-title">📌 No disponible</h2>
+        <video src="Mensaje.mp4" controls></video>
+    </div>
+     <div class="video-box">
+        <h2 class="section-title">📌 No disponible</h2>
+        <video src="ejemplo.mp4" controls></video>
+    </div>
+
+   <div class="video-box">
+        <h2 class="section-title">📌 No disponible</h2>
+        <video src="ejemplo.mp4" controls></video>
+    </div>
+   <div class="video-box">
+        <h2 class="section-title">📌 No disponible</h2>
         <video src="ejemplo.mp4" controls></video>
     </div>
 
@@ -123,5 +136,6 @@ footer {
 
 </body>
 </html>
+
 
 
